--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -9,14 +9,8 @@
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="https://github.com/beeman" target="_blank">
-        <i class="fa fa-github"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://twitter.com/beeman_nl" target="_blank">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://medium.com/@beeman" target="_blank">
-        <i class="fa fa-medium"></i>
+      <a class="nav-item nav-link" href="https://kineticit.com.au" target="_blank">
+        <i class="fa fa-clock-o"></i>
       </a>
     </div>
   </div>
