--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-layout>
   <div class="jumbotron">
-    <h1>Angular CLI v6 + Bootstrap & FontAwesome</h1>
+    <h1>Table Name</h1>
     <p>
-      Quick start angular project with Bootstrap and Font-Awesome.
+      This is a quick table angular web app.
     </p>
 
-    .. the table
+    <app-datatable> </app-datatable>
   </div>
 </app-layout>
